# Apachek

./: .gitmodules  CHANGELOG.md  README.md  bootstrap.sh  install.sh  kei-code-implementer.md  kei-fal-ai-runner.md  kei-infra-implementer.md  kei-ml-implementer.md  kei-modal-runner.md  marketplace.json  plugin.json  settings-snippet.json  web-install.sh
_primitives/_rust/: Cargo.toml
_primitives/_rust/firewall-diff/: Cargo.toml
_primitives/_rust/frustration-matrix/: Cargo.toml
_primitives/_rust/frustration-matrix/src/: categories.rs  eval_predict.rs
_primitives/_rust/kei-agent-runtime/: Cargo.toml
_primitives/_rust/kei-agent-runtime/src/: dna.rs  simulated_merge.rs
_primitives/_rust/kei-artifact/: Cargo.toml
_primitives/_rust/kei-artifact/src/: validate.rs
_primitives/_rust/kei-atom-discovery/: Cargo.toml
_primitives/_rust/kei-auth/: Cargo.toml
_primitives/_rust/kei-auth-apple/: Cargo.toml
_primitives/_rust/kei-auth-google/: Cargo.toml
_primitives/_rust/kei-auth-magiclink/: Cargo.toml
_primitives/_rust/kei-auth-magiclink/src/: token.rs
_primitives/_rust/kei-auth-webauthn/: Cargo.toml
_primitives/_rust/kei-auth-webauthn/src/: builder.rs  lib.rs
_primitives/_rust/kei-auth/src/: scopes.rs
_primitives/_rust/kei-backend-daytona/: Cargo.toml
_primitives/_rust/kei-backend-daytona/src/: toolbox.rs
_primitives/_rust/kei-brain-view/: Cargo.toml
_primitives/_rust/kei-buddy/: Cargo.toml  README.md
_primitives/_rust/kei-buddy/src/: error.rs  lib.rs  machine_helpers.rs  provision_decrypt.rs  state.rs  tick.rs  transition.rs
_primitives/_rust/kei-cache/: Cargo.toml
_primitives/_rust/kei-capability/: Cargo.toml
_primitives/_rust/kei-capability/src/: main.rs
_primitives/_rust/kei-changelog/: Cargo.toml
_primitives/_rust/kei-chat-store/: Cargo.toml
_primitives/_rust/kei-compute-baremetal/: Cargo.toml
_primitives/_rust/kei-compute-digitalocean/: Cargo.toml
_primitives/_rust/kei-compute-linode/: Cargo.toml
_primitives/_rust/kei-compute-vultr/: Cargo.toml
_primitives/_rust/kei-conflict-scan/: Cargo.toml
_primitives/_rust/kei-content-store/: Cargo.toml
_primitives/_rust/kei-cortex/: Cargo.toml
_primitives/_rust/kei-cron-scheduler/: Cargo.toml
_primitives/_rust/kei-crossdomain/: Cargo.toml
_primitives/_rust/kei-curator/: Cargo.toml
_primitives/_rust/kei-db-contract/: Cargo.toml
_primitives/_rust/kei-decision/: Cargo.toml
_primitives/_rust/kei-decompose/: Cargo.toml
_primitives/_rust/kei-diff/: Cargo.toml
_primitives/_rust/kei-discover/: Cargo.toml
_primitives/_rust/kei-dna-index/: Cargo.toml
_primitives/_rust/kei-entity-store/: Cargo.toml
_primitives/_rust/kei-export-trajectories/: Cargo.toml
_primitives/_rust/kei-forge/: Cargo.toml
_primitives/_rust/kei-fork/: Cargo.toml
_primitives/_rust/kei-frustration-loop/: Cargo.toml
_primitives/_rust/kei-gateway/: Cargo.toml
_primitives/_rust/kei-gdrive-import/: Cargo.toml
_primitives/_rust/kei-git-bitbucket/: Cargo.toml
_primitives/_rust/kei-git-forgejo/: Cargo.toml
_primitives/_rust/kei-git-gitea/: Cargo.toml
_primitives/_rust/kei-git-gitlab/: Cargo.toml
_primitives/_rust/kei-graph-check/: Cargo.toml
_primitives/_rust/kei-graph-export/: Cargo.toml
_primitives/_rust/kei-graph-stream/: Cargo.toml
_primitives/_rust/kei-hibernate/: Cargo.toml
_primitives/_rust/kei-import-project/: Cargo.toml
_primitives/_rust/kei-leak-matrix/: Cargo.toml
_primitives/_rust/kei-ledger/: Cargo.toml
_primitives/_rust/kei-ledger-sign/: Cargo.toml
_primitives/_rust/kei-llm-bridge-mlx/: Cargo.toml
_primitives/_rust/kei-llm-llamacpp/: Cargo.toml
_primitives/_rust/kei-llm-mlx/: Cargo.toml
_primitives/_rust/kei-llm-ollama/: Cargo.toml
_primitives/_rust/kei-llm-router/: Cargo.toml
_primitives/_rust/kei-machine-probe/: Cargo.toml
_primitives/_rust/kei-mcp/: Cargo.toml
_primitives/_rust/kei-memory/: Cargo.toml
_primitives/_rust/kei-memory-postgres/: Cargo.toml
_primitives/_rust/kei-memory-redis/: Cargo.toml
_primitives/_rust/kei-memory-sled/: Cargo.toml
_primitives/_rust/kei-memory-sqlite/: Cargo.toml
_primitives/_rust/kei-migrate/: Cargo.toml
_primitives/_rust/kei-model/: Cargo.toml
_primitives/_rust/kei-model-router/: Cargo.toml
_primitives/_rust/kei-net-ipsec/: Cargo.toml
_primitives/_rust/kei-net-openvpn/: Cargo.toml
_primitives/_rust/kei-net-wireguard/: Cargo.toml
_primitives/_rust/kei-notify-discord/: Cargo.toml
_primitives/_rust/kei-notify-slack/: Cargo.toml
_primitives/_rust/kei-notify-sms/: Cargo.toml
_primitives/_rust/kei-notify-telegram/: Cargo.toml
_primitives/_rust/kei-pet/: Cargo.toml
_primitives/_rust/kei-ping/: Cargo.toml
_primitives/_rust/kei-pipe/: Cargo.toml
_primitives/_rust/kei-projects-index/: Cargo.toml
_primitives/_rust/kei-projects-watcher/: Cargo.toml
_primitives/_rust/kei-provision/: Cargo.toml
_primitives/_rust/kei-prune/: Cargo.toml
_primitives/_rust/kei-refactor-engine/: Cargo.toml
_primitives/_rust/kei-registry/: Cargo.toml
_primitives/_rust/kei-replay/: Cargo.toml
_primitives/_rust/kei-router/: Cargo.toml
_primitives/_rust/kei-runtime/: Cargo.toml
_primitives/_rust/kei-runtime-core/: Cargo.toml
_primitives/_rust/kei-sage/: Cargo.toml
_primitives/_rust/kei-scheduler/: Cargo.toml
_primitives/_rust/kei-search-core/: Cargo.toml
_primitives/_rust/kei-shared/: Cargo.toml
_primitives/_rust/kei-skill-importer/: Cargo.toml
_primitives/_rust/kei-skills/: Cargo.toml
_primitives/_rust/kei-social-store/: Cargo.toml
_primitives/_rust/kei-spawn/: Cargo.toml
_primitives/_rust/kei-store/: Cargo.toml
_primitives/_rust/kei-svc-systemd/: Cargo.toml
_primitives/_rust/kei-task/: Cargo.toml
_primitives/_rust/kei-tlog/: Cargo.toml
_primitives/_rust/kei-token-tracker/: Cargo.toml
_primitives/_rust/kei-tty/: Cargo.toml
_primitives/_rust/kei-watch/: Cargo.toml
_primitives/_rust/keisei/: Cargo.toml
_primitives/_rust/mock-render/: Cargo.toml
_primitives/_rust/ssh-check/: Cargo.toml
_primitives/_rust/tokens-sync/: Cargo.toml
_primitives/_rust/visual-diff/: Cargo.toml
(+313 files in other folders)
