[package]
name = "frustration-matrix"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Longitudinal user-frustration matrix — regex-based chatlog scan (no ML)"
authors.workspace = true
license.workspace = true

[lib]
name = "frustration_matrix"
path = "src/lib.rs"

[[bin]]
name = "frustration-matrix"
path = "src/main.rs"

[dependencies]
regex = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
