[package]
name = "kei-agent-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Agent substrate v1 — Capability trait + registry + compose/spawn/verify runtime"
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-agent-runtime"
path = "src/main.rs"

[lib]
name = "kei_agent_runtime"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = "1"
walkdir = { workspace = true }
sha2 = { workspace = true }
rand = "0.8"
kei-shared = { path = "../kei-shared" }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.keisei]
backend = "none"
description = "Agent substrate v1 runtime: composes capability fragments, spawns gated agents, verifies on return"
authors = ["Denis Parfionovich <info@greendragon.info>"]
