[package]
name = "kei-artifact"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Typed artifact handoff pipeline — BMAD-style document pass-between agents with JSON Schema validation"
authors.workspace = true
license.workspace = true

[[bin]]
name = "kei-artifact"
path = "src/main.rs"

[lib]
name = "kei_artifact"
path = "src/lib.rs"

[dependencies]
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
