[package]
name = "kei-atom-discovery"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Shared atom discovery + frontmatter parsing + safe path join"
authors.workspace = true
license.workspace = true

[lib]
name = "kei_atom_discovery"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.keisei]
backend = "none"
description = "Shared atom discovery + frontmatter parsing + safe path join"
authors = ["Denis Parfionovich <info@greendragon.info>"]
