[package]
name = "kei-auth-magiclink"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "AuthProvider impl for passwordless email magic-link tokens (HMAC-SHA256, stateless). Wave 7 atomar; sibling of kei-auth (multi-tenant tokens) and kei-auth-{google,github,microsoft,apple}."
authors.workspace = true
license.workspace = true

[lib]
name = "kei_auth_magiclink"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
base64 = "0.22"
subtle = "2"
kei-runtime-core = { path = "../kei-runtime-core" }

[dev-dependencies]
tokio = { workspace = true }

[package.metadata.keisei]
backend = "magiclink"
trait = "AuthProvider"
description = "Email magic-link AuthProvider (HMAC-SHA256 stateless tokens, passwordless)"
authors = ["Denis Parfionovich <info@greendragon.info>"]
