[package]
name = "kei-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Multi-tenant session tokens with scopes + HMAC-signed expiry (SQLite backend)."
authors.workspace = true
license.workspace = true

[[bin]]
name = "kei-auth"
path = "src/main.rs"

[lib]
name = "kei_auth"
path = "src/lib.rs"

[dependencies]
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
