[package]
name = "kei-backend-daytona"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Daytona serverless backend with hibernation (HERMES-MIGRATION P1.2). Resume-or-create sandboxes via REST."
authors = ["Denis Parfionovich <info@greendragon.info>"]

[lib]
name = "kei_backend_daytona"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
