[package]
name = "kei-brain-view"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Read-only TUI/CLI visualizer of kei-ledger taxonomy graph + agent lineage (Wave 14)"
authors.workspace = true
license.workspace = true

[[bin]]
name = "kei-brain-view"
path = "src/main.rs"

[lib]
name = "kei_brain_view"
path = "src/lib.rs"

[dependencies]
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
kei-dna-index = { path = "../kei-dna-index" }

[dev-dependencies]
tempfile = { workspace = true }
