[package]
name = "kei-cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Atom result cache — deterministic wrapping of pure (query/transform) atom invocations"
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-cache"
path = "src/main.rs"

[lib]
name = "kei_cache"
path = "src/lib.rs"

[dependencies]
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
kei-atom-discovery = { path = "../kei-atom-discovery" }

[dev-dependencies]
tempfile = { workspace = true }
