[package]
name = "kei-capability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Hook-protocol CLI adapter — routes PreToolUse check + on-return verify to kei-agent-runtime capabilities"
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-capability"
path = "src/main.rs"

[lib]
name = "kei_capability"
path = "src/lib.rs"

[dependencies]
kei-agent-runtime = { path = "../kei-agent-runtime" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.keisei]
backend = "none"
description = "Hook-protocol CLI — `kei-capability check <name>` / `kei-capability verify <name>`"
authors = ["Denis Parfionovich <info@greendragon.info>"]
