[package]
name = "kei-changelog"
version = "0.1.0"
edition.workspace = true
description = "Git-cliff-style CHANGELOG.md generator from Conventional Commits."
authors.workspace = true
license.workspace = true

[[bin]]
name = "kei-changelog"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
git2 = { version = "0.19", default-features = false }
regex = { workspace = true }
