[package]
name = "kei-chat-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Session persistence for Claude conversations. Port of LBM internal/chat."
authors.workspace = true
license.workspace = true

[[bin]]
name = "kei-chat-store"
path = "src/main.rs"

[lib]
name = "kei_chat_store"
path = "src/lib.rs"

[dependencies]
kei-entity-store = { path = "../kei-entity-store" }
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
