[package]
name = "kei-conflict-scan"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Deep-sleep conflict scanner — rules/hooks/blocks/orphans/CP violations (v0.13.0)"
authors.workspace = true
license.workspace = true

[[bin]]
name = "kei-conflict-scan"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
