[package]
name = "kei-content-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Asset + prompt + campaign registry. Port of LBM internal/content."
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-content-store"
path = "src/main.rs"

[lib]
name = "kei_content_store"
path = "src/lib.rs"

[dependencies]
kei-entity-store = { path = "../kei-entity-store" }
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
