[package]
name = "kei-crossdomain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Typed-edge cross-domain store. Port of LBM internal/crossdomain."
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-crossdomain"
path = "src/main.rs"

[lib]
name = "kei_crossdomain"
path = "src/lib.rs"

[dependencies]
kei-entity-store = { path = "../kei-entity-store" }
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
