[package]
name = "kei-curator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Edge-decay + orphan-prune graph hygiene. Port of LBM internal/curator."
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-curator"
path = "src/main.rs"

[lib]
name = "kei_curator"
path = "src/lib.rs"

[dependencies]
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
