[package]
name = "kei-db-contract"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Diff SQL migration schemas against TypeScript type declarations to catch frontend ↔ DB drift."

[lib]
name = "kei_db_contract"
path = "src/lib.rs"

[[bin]]
name = "kei-db-contract"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
sqlparser = "0.51"

[dev-dependencies]
tempfile = { workspace = true }
