[package]
name = "kei-decision"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Linking layer between research output (MASTER-REPORT.md) and decision execution (kei-spawn task.toml + kei-ledger pre-fork)"
authors.workspace = true
license.workspace = true

[[bin]]
name = "kei-decision"
path = "src/main.rs"

[lib]
name = "kei_decision"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.keisei]
backend = "none"
description = "Parses /research MASTER-REPORT.md actionable plans, classifies + ranks actions, emits kei-spawn-compatible task.toml, optionally drives kei-spawn + kei-ledger pre-fork. Bootstraps day-research → action pipeline so /research output flows into kei-spawn without manual orchestrator intervention."
authors = ["Denis Parfionovich <info@greendragon.info>"]
